fix Makefile in arithmetic

--- a/hw2/arithmetic/Makefile
+++ b/hw2/arithmetic/Makefile
@@ -3,8 +3,8 @@ OPTIONS=-g -std=c++17 -Wall -Wextra -I../token/
 COMPILE=$(COMPILER) $(OPTIONS)
 
 
-arithmetic: ../token/token_stack.o ../token/token_list.o ../token/token.o
-	$(COMPILE) $^ arithmetic.cpp -o arithmetic
+arithmetic: arithmetic.cpp ../token/token_stack.o ../token/token_list.o ../token/token.o
+	$(COMPILE) $^ -o arithmetic
 
 ../token/token_stack.o:
 	make -C ../token/ token_stack.o
@@ -14,3 +14,8 @@ arithmetic: ../token/token_stack.o ../token/token_list.o ../token/token.o
 
 ../token/token.o:
 	make -C ../token/ token.o
+
+clean:
+	rm -f *.o arithmetic ../token/token_stack.o ../token/token_list.o ../token/token.o
+
+.PHONY: all test clean
